vf_scale: give a clue in case of invalid expression self-reference

Address trac ticket #706.